Remove google tracking, fix a links on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -253,11 +253,8 @@ ul, ol {
 	}
 
 	a {
-		border-bottom: 1px solid rgba(255,255,255,0.2);
 		color: $colorLink;
-		display: inline-block;
-		line-height: em(15px);
-		text-decoration: none;
+		opacity: 0.8;
 
 		@include transition;
 
@@ -266,6 +263,7 @@ ul, ol {
 		&:hover {
 			border-color: $colorPrimary;
 			color: $colorLinkHover;
+			opacity: 1;
 		}
 	}
 
